# spark_command_airflow_operator

./: README.md  pyproject.toml  setup.cfg
spark_command_airflow_operator/src/dag/: spark_command_submit_dag.py
spark_command_airflow_operator/src/operator/: spark_command_submit_operator.py
tests/: test_spark_command_airflow_operator.py
