[tool.poetry]
name = "spark-command-airflow-operator"
version = "0.1.0"
description = ""
authors = ["Sigmar Stefansson <sigmarkarl@hotmail.com>"]
readme = "README.md"
packages = [{include = "spark_command_airflow_operator"}]

[tool.poetry.dependencies]
python = "^3.9"
apache-airflow = "^2.5.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
