[metadata]
name = spark_command_airflow_operator
version = 1.0.0
author = Sigmar Stefansson
author_email = sigmarkarl@hotmail.com
description = An airflow operator for spark command submission
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/sigmarkarl/spark_command_airflow_operator
project_urls =
    Bug Tracker = https://gitlab.com/spark_command_airflow_operator/-/issues
    repository = https://gitlab.com/sigmarkarl/spark_command_airflow_operator
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src